=== ALPHA 3.2 ===

Code changes to have a persistent scenario module as runtime controller.


=== ALPHA 3.1 ===

Partial FAR compatibility.
Fixed (?) the issue with RAPIER engines.
Exponential decay of the recovery value of a part.


=== ALPHA 3 ===

Big Stuff:
 - EVA Inspection: you can now inspect a part while on EVA to have a ballpark estimate of its reliability (currently hideous, will embellish asap);
 - Inpsection bonus: additionally, performing an inspection will give a temporary reliability boost to the part;
 - Preemptive maintenance: you can now permanently improve the reliability (by consuming spare parts);
 - The higher a part's temperature, the faster it will age: be careful with those reentry angles!

Small stuff:
 - Now all the reliability infos are in their own panel in the editor;
 - Added support for engines that use ModuleEngineFX: now all engines should be covered, at least in theory;

Fixes:
 - Timewarp now stops when a failure occurs;
 - Resource leaks can't be stopped by shutting the valves;
 - The kerbal's name is now displayed correctly during EVA events
 - A bug that caused leaks to show incorrectly in the flight log
 - The formatting of the flight log messages.




=== ALPHA 2.2 ===

Added:
- Now failures are repairs are listed in the Flight Events log
- Master settings file: located in DangIt\PluginData\DangIt\DangIt.cfg (don't move it). Contains the leak blacklist and also 3 master switches to enable / disable messages and the red glow (and a placeholder for sounds). This file is reloaded at each flight scene. Silent failures will not display any notification even when the master is enabled. 

Fixed:
- the persistency of failures: now they should be loaded correctly between saves.
- the leak blacklist. Now it actually works.
- the lights on landing gear now fail correctly.
- the GUI of reaction wheels is now hidden when the wheel fails.
- new reliability buff for everything (+100% MTBF: I laughed at 343 for buffing the warthog by 30%)
