@@ -1,17 +1,4 @@
-﻿DEBUG
-{
-	repairDistance = 20
-	manualFailures = true
-	actionGroups = true
-	freeRepair = true
-}
-NOTIFICATIONS
-{
-	messages = true
-	glow = true
-	sounds = true
-}
-BLACKLIST
+﻿BLACKLIST
 {
 	// Stock
 	ignore = ElectricCharge
