@@ -71,7 +71,7 @@ namespace ippo
         /// </summary>
         public static void Broadcast(string message, bool overrideMute = false, float time = 5f)
         {
-            if (overrideMute || DangIt.Instance.NotificationSettings.Messages)
+            if (overrideMute || DangIt.Instance.Settings.Messages)
                 ScreenMessages.PostScreenMessage(message, time, ScreenMessageStyle.UPPER_CENTER);
         }
 
@@ -130,7 +130,7 @@ namespace ippo
 
 
             // If the glow is globally disabled, don't even bother looking for failures
-            if (DangIt.Instance.NotificationSettings.Glow)
+            if (DangIt.Instance.Settings.Glow)
             {
                 // Scan all the failure modules, if any
                 List<FailureModule> failModules = part.Modules.OfType<FailureModule>().ToList();
