@@ -1,6 +1,7 @@
 === ALPHA 3.2 ===
 
-Code changes to have a persistent scenario module as runtime controller.
+Heavy code changes to have the runtime implemented as a ScenarioModule which also holds settings.
+Now using the stock messaging system for inspections and failures.
 
 
 === ALPHA 3.1 ===
